/*
 * SPDX-FileCopyrightText: Copyright (c) 2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 * SPDX-License-Identifier: Apache-2.0
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package holoscan.service;

enum IOType
{
    INPUT = 0;
    OUTPUT = 1;
}

enum ConnectorType
{
    DEFAULT = 0;
    DOUBLE_BUFFER = 1;
    UCX = 2;
}

message ConnectorArg
{
    string key = 1;
    oneof value {
        string str_value = 2;
        int32 int_value = 3;
        double double_value = 4;
    }
}

message ConnectionItem {
    string name = 1;
    IOType io_type = 2;
    ConnectorType connector_type = 3;
    repeated ConnectorArg args = 4;
}
